# flatecs

./: AGENTS.md  Architecture.md  Cargo.toml  README.md
flatecs/: Cargo.toml
flatecs-macros/: Cargo.toml
flatecs-macros/src/: extractable.rs
flatecs/examples/: normal.rs
flatecs/src/: lib.rs
structecs/: Cargo.toml
structecs-macros/: Cargo.toml
structecs-macros/src/: extractable.rs
structecs/benches/: ecs_comparison.rs
structecs/examples/: additional.rs  concurrent.rs  handler.rs  normal.rs  parallel.rs
structecs/src/: acquirable.rs  archetype.rs  entity.rs  error.rs  extractable.rs  extractor.rs  handler.rs  lib.rs  query.rs  tests.rs  world.rs
structecs/tests/: additional_test.rs  alignment_test.rs  archetype_tests.rs  base_usage.rs  concurrent_test.rs  drop_order_test.rs  edge_cases_test.rs  entity_tests.rs  extractable_tests.rs  extraction_safety_test.rs  extractor_tests.rs  integration_test.rs  memory_safety_test.rs  refcount_test.rs
