[package]
name = "structecs-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Procedural macros for the structecs entity-component framework"
readme = "../README.md"
keywords = ["ecs", "entity", "component", "macro", "derive"]
categories = ["game-development", "data-structures"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
