[package]
name = "structecs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "A flexible entity-component framework without the System. Manage your data like ECS, control your logic like OOP."
readme = "../README.md"
keywords = ["ecs", "entity", "component", "game", "gamedev"]
categories = ["game-development", "data-structures", "concurrency"]

[lints]
workspace = true

[dependencies]
dashmap = "6.1"
enum-table = "2.1"
parking_lot = "0.12"
rustc-hash = "2.1"
structecs-macros = { path = "../structecs-macros", version = "0" }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "query_benchmark"
harness = false
