[package]
name = "structecs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "A structural data access framework. Type-safe extraction from nested structures with Arc-based smart pointers."
readme = "../README.md"
keywords = ["ecs", "entity", "component", "game", "gamedev"]
categories = ["game-development", "data-structures", "concurrency"]

[lints]
workspace = true

[features]
default = []
archetype = ["dep:parking_lot"]

[dependencies]
parking_lot = { version = "0.12", optional = true }
rustc-hash = "2.1"
structecs-macros = { path = "../structecs-macros", version = "0" }
inventory = "0.3"
